--- a/style.css
+++ b/style.css
@@ -1,28 +1,10 @@
-/* *{
+ *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 .container{
     width: 100%;
-    height: 100vh;
-    display: flex;
+    height: 20vh;
     margin:0 auto;
-    padding-top: 100px;
-    border: 1px solid #fff;
-    background-color: black;
-    justify-content: space-around;
 }
-.box-1{
-    width: 400px;
-    height: 400px;
-}
-.butt{
-    width: 100px;
-    height: 40px;
-    margin:0 auto;
-    align-items: center;
-    color: #fff;
-    justify-content:center;
-    border: 1px solid #fff;
-} */
